--- a/portfolio.html
+++ b/portfolio.html
@@ -56,144 +56,144 @@
 
     <!--main portfolio-->
     <main>
-      <section class="section">
+      <section class="section section-portfolio">
         <div class="container">
-          <h1 class="section-title visually-hidden">РАБОТЫ</h1>
+          <h1 class="section-portfolio__title visually-hidden">РАБОТЫ</h1>
           <ul class="photo-nav list">
-            <li class="item">
-              <button type="button" class="button photo-nav primary">Все</button>
+            <li class="photo-nav__item">
+              <button type="button" class="button photo-nav__button photo-nav__button--primary">Все</button>
             </li>
-            <li class="item"><button type="button" class="button photo-nav">Веб-сайты</button></li>
-            <li class="item"><button type="button" class="button photo-nav">Приложения</button></li>
-            <li class="item"><button type="button" class="button photo-nav">Дизайн</button></li>
-            <li class="item"><button type="button" class="button photo-nav">Маркетинг</button></li>
+            <li class="photo-nav__item"><button type="button" class="button photo-nav__button">Веб-сайты</button></li>
+            <li class="photo-nav__item"><button type="button" class="button photo-nav__button">Приложения</button></li>
+            <li class="photo-nav__item"><button type="button" class="button photo-nav__button">Дизайн</button></li>
+            <li class="photo-nav__item"><button type="button" class="button photo-nav__button">Маркетинг</button></li>
           </ul>
 
-          <h2 class="section-title visually-hidden">Фото работ</h2>
-          <ul class="list list-photos">
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+          <h2 class="section-portfolio__title visually-hidden">Фото работ</h2>
+          <ul class="list photo-cards">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                   <img src="./images/laptop1.jpg" alt="laptop" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-                <div class="container-photo-text">
-                  <h2 class="section-title-photos">Технокряк</h2>
-                  <p class="section-title-photos-career">Веб-сайт</p>
+                <div class="card__text">
+                  <h2 class="card__project">Технокряк</h2>
+                  <p class="card__career">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                   <img src="./images/basketball.jpg" alt="basketball" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-              <div class="container-photo-text">
-                <h2 class="section-title-photos">Постер New Orlean vs Golden Star</h2>
-                <p class="section-title-photos-career">Дизайн</p>
+              <div class="card__text">
+                <h2 class="card__project">Постер New Orlean vs Golden Star</h2>
+                <p class="card__career">Дизайн</p>
               </div>
             </a>
             </li>
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                   <img src="./images/seafood.jpg" alt="seafood" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-                <div class="container-photo-text">
-                  <h2 class="section-title-photos">Ресторан Seafood</h2>
-                  <p class="section-title-photos-career">Приложение</p>
+                <div class="card__text">
+                  <h2 class="card__project">Ресторан Seafood</h2>
+                  <p class="card__career">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                   <img src="./images/headphones.jpg" alt="headphones" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-                <div class="container-photo-text">
-                  <h2 class="section-title-photos">Проект Prime</h2>
-                  <p class="section-title-photos-career">Маркетинг</p>
+                <div class="card__text">
+                  <h2 class="card__project">Проект Prime</h2>
+                  <p class="card__career">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                   <img src="./images/boxes.jpg" alt="boxes" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-                <div class="container-photo-text">
-                  <h2 class="section-title-photos">Проект Boxes</h2>
-                  <p class="section-title-photos-career">Приложение</p>
+                <div class="card__text">
+                  <h2 class="card__project">Проект Boxes</h2>
+                  <p class="card__career">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                   <img src="./images/mac.jpg" alt="bac" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-                <div class="container-photo-text">
-                  <h2 class="section-title-photos">Inspiration has no Borders</h2>
-                  <p class="section-title-photos-career">Веб-сайт</p>
+                <div class="card__text">
+                  <h2 class="card__project">Inspiration has no Borders</h2>
+                  <p class="card__career">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                   <img src="./images/book.jpg" alt="book" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-                <div class="container-photo-text">
-                  <h2 class="section-title-photos">Издание Limited Edition</h2>
-                  <p class="section-title-photos-career">Дизайн</p>
+                <div class="card__text">
+                  <h2 class="card__project">Издание Limited Edition</h2>
+                  <p class="card__career">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                 <img src="./images/steaker.jpg" alt="steaker" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-                <div class="container-photo-text">
-                  <h2 class="section-title-photos">Проект LAB</h2>
-                  <p class="section-title-photos-career">Маркетинг</p>
+                <div class="card__text">
+                  <h2 class="card__project">Проект LAB</h2>
+                  <p class="card__career">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="item portfolio">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-img">
+            <li class="card">
+              <a href="" class="card__link">
+                <div class="card__img">
                   <img src="./images/laptop-hands.jpg" alt="laptop-hands" width="370" />
-                  <div class="portfolio-img-overlay">
-                    <p portfolio-img-overlay>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="card__overlay">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                   </div>
                 </div>
-                <div class="container-photo-text">
-                  <h2 class="section-title-photos">Growing Business</h2>
-                  <p class="section-title-photos-career">Приложение</p>
+                <div class="card__text">
+                  <h2 class="card__project">Growing Business</h2>
+                  <p class="card__career">Приложение</p>
                 </div>
               </a>
             </li>
