--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
       <div class="container container-header">
         <a href="./index.html" class="logo"><span class="logo__web">Web</span>Studio</a>
         <nav>
-          <ul class="site-nav list">
+          <ul class="site-nav">
             <li class="site-nav__item">
-              <a href="./index.html" class="site-nav__link site-nav__link--current decor">Студия</a>
+              <a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a>
             </li>
             <li class="site-nav__item">
-              <a href="./portfolio.html" class="site-nav__link decor">Портфолио</a>
+              <a href="./portfolio.html" class="site-nav__link">Портфолио</a>
             </li>
-            <li class="site-nav__item"><a href="" class="site-nav__link decor">Контакты</a></li>
+            <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="auth-nav list">
+        <ul class="auth-nav">
           <li class="auth-nav__item">
             <a href="mailto:info@devstudio.com" class="auth-nav__link">
               <svg class="auth-nav__icon--envelope">
@@ -73,7 +73,7 @@
       <section class="section section-features">
         <div class="container">
           <h2 class="section-features__title visually-hidden">Плюсы работы</h2>
-          <ul class="features-list list">
+          <ul class="features-list">
             <div>
               <li class="features-list__item">
                 <div class="features-icons-cont">
@@ -139,7 +139,7 @@
       <section class="section section-doing">
         <div class="container">
           <h2 class="section-doing__title">Чем мы занимаемся</h2>
-          <ul class="doing-list list">
+          <ul class="doing-list">
             <li class="doing-list__item">
               <img src="./images/we-doing1.jpg" alt="Чем-мы-занимаемся1" width="370" />
               <div class="doing-list__element">
@@ -166,14 +166,14 @@
       <section class="section section-team">
         <div class="container">
           <h2 class="section-team__title">Наша команда</h2>
-          <ul class="team-list list">
+          <ul class="team-list">
             <li class="team-list__item">
               <img src="./images/membe1.jpg" alt="Игорь Демьяненко" width="270" />
               <div class="container team-list__container">
                 <h3 class="team-list__name">Игорь Демьяненко</h3>
                 <p class="team-list__profession">Product Designer</p>
 
-                <ul class="social-list list">
+                <ul class="social-list">
                   <li class="social-list__item">
                     <a href="https://www.instagram.com" class="social-list__link">
                       <svg class="social-list__icon">
@@ -211,7 +211,7 @@
                 <h3 class="team-list__name">Ольга Репина</h3>
                 <p class="team-list__profession">Frontend Developer</p>
 
-                <ul class="social-list list">
+                <ul class="social-list">
                   <li class="social-list__item">
                     <a href="https://www.instagram.com" class="social-list__link">
                       <svg class="social-list__icon">
@@ -249,7 +249,7 @@
                 <h3 class="team-list__name">Николай Тарасов</h3>
                 <p class="team-list__profession">Marketing</p>
 
-                <ul class="social-list list">
+                <ul class="social-list">
                   <li class="social-list__item">
                     <a href="https://www.instagram.com" class="social-list__link">
                       <svg class="social-list__icon">
@@ -287,7 +287,7 @@
                 <h3 class="team-list__name">Михаил Ермаков</h3>
                 <p class="team-list__profession">UI Designer</p>
 
-                <ul class="social-list list">
+                <ul class="social-list">
                   <li class="social-list__item">
                     <a href="https://www.instagram.com" class="social-list__link">
                       <svg class="social-list__icon">
@@ -327,7 +327,7 @@
      <section class="section client-section ">
         <div class="container">
           <h2 class="client-section__title">Постоянные клиенты</h2>
-          <ul class="list client-section__list">
+          <ul class="client-section__list">
             <li class="client">
               <a href="" class="client__button">
                 <svg class="client__icon">
@@ -383,17 +383,17 @@
             ><span class="footer-logo--white">Web</span
             ><span class="footer-logo--blue">Studio</span></a>
           <address>
-            <a href="https://goo.gl/maps/uPLYLn5CrwRYCuye6" class="footer__address decor"
+            <a href="https://goo.gl/maps/uPLYLn5CrwRYCuye6" class="footer__address"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
-            <a href="mailto:info@example.com" class="footer__mail decor">info@example.com</a>
-            <a href="tel:+380991111111" class="footer__phone decor">+38 099 111 11 11</a>
+            <a href="mailto:info@example.com" class="footer__mail">info@example.com</a>
+            <a href="tel:+380991111111" class="footer__phone">+38 099 111 11 11</a>
           </address>
         </div>
 
         <div class="footer-social">
           <p class="footer-social__slogan">присоединяйтесь</p>
-          <ul class="list footer-social__list">
+          <ul class="footer-social__list">
             <li class="footer-social__item">
               <a href="https://www.instagram.com" class="footer-social__link" target="_blank">
                 <svg class="footer-social__icon">
@@ -435,7 +435,7 @@
           </div> 
         </form>
          <div class="subscribe-form__button">
-          <button class="button subscribe-form__button--text" type="submit">Подписаться 
+          <button class="subscribe-form__button--text" type="submit">Подписаться 
               <svg class="subscribe-form__button--icon">
               <use href="./images/icons.svg#icon-send"></use>
               </svg>
@@ -490,7 +490,7 @@
                 </label>
               </div>
             
-              <button class="button button__send" type="submit">Отправить</button>
+              <button class="button__send" type="submit">Отправить</button>
               </div>
             </form>
           </div>
