--- a/portfolio.html
+++ b/portfolio.html
@@ -23,17 +23,17 @@
       <div class="container container-header">
         <a href="./index.html" class="logo"><span class="logo__web">Web</span>Studio</a>
         <nav>
-          <ul class="site-nav list">
+          <ul class="site-nav">
             <li class="site-nav__item">
-              <a href="./index.html" class="site-nav__link decor">Студия</a>
+              <a href="./index.html" class="site-nav__link">Студия</a>
             </li>
             <li class="site-nav__item">
-              <a href="./portfolio.html" class="site-nav__link  site-nav__link--current decor">Портфолио</a>
+              <a href="./portfolio.html" class="site-nav__link  site-nav__link--current">Портфолио</a>
             </li>
-            <li class="site-nav__item"><a href="" class="site-nav__link decor">Контакты</a></li>
+            <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="auth-nav list">
+        <ul class="auth-nav">
           <li class="auth-nav__item">
             <a href="mailto:info@devstudio.com" class="auth-nav__link">
               <svg class="auth-nav__icon--envelope">
@@ -59,18 +59,18 @@
       <section class="section section-portfolio">
         <div class="container">
           <h1 class="section-portfolio__title visually-hidden">РАБОТЫ</h1>
-          <ul class="photo-nav list">
+          <ul class="photo-nav">
             <li class="photo-nav__item">
-              <button type="button" class="button photo-nav__button photo-nav__button--primary">Все</button>
+              <button type="button" class="photo-nav__button photo-nav__button--primary">Все</button>
             </li>
-            <li class="photo-nav__item"><button type="button" class="button photo-nav__button">Веб-сайты</button></li>
-            <li class="photo-nav__item"><button type="button" class="button photo-nav__button">Приложения</button></li>
-            <li class="photo-nav__item"><button type="button" class="button photo-nav__button">Дизайн</button></li>
-            <li class="photo-nav__item"><button type="button" class="button photo-nav__button">Маркетинг</button></li>
+            <li class="photo-nav__item"><button type="button" class="photo-nav__button">Веб-сайты</button></li>
+            <li class="photo-nav__item"><button type="button" class="photo-nav__button">Приложения</button></li>
+            <li class="photo-nav__item"><button type="button" class="photo-nav__button">Дизайн</button></li>
+            <li class="photo-nav__item"><button type="button" class="photo-nav__button">Маркетинг</button></li>
           </ul>
 
           <h2 class="section-portfolio__title visually-hidden">Фото работ</h2>
-          <ul class="list photo-cards">
+          <ul class="photo-cards">
             <li class="card">
               <a href="" class="card__link">
                 <div class="card__img">
@@ -209,17 +209,17 @@
             ><span class="footer-logo--white">Web</span
             ><span class="footer-logo--blue">Studio</span></a>
           <address>
-            <a href="https://goo.gl/maps/uPLYLn5CrwRYCuye6" class="footer__address decor"
+            <a href="https://goo.gl/maps/uPLYLn5CrwRYCuye6" class="footer__address"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
-            <a href="mailto:info@example.com" class="footer__mail decor">info@example.com</a>
-            <a href="tel:+380991111111" class="footer__phone decor">+38 099 111 11 11</a>
+            <a href="mailto:info@example.com" class="footer__mail">info@example.com</a>
+            <a href="tel:+380991111111" class="footer__phone">+38 099 111 11 11</a>
           </address>
         </div>
 
         <div class="footer-social">
           <p class="footer-social__slogan">присоединяйтесь</p>
-          <ul class="list footer-social__list">
+          <ul class="footer-social__list">
             <li class="footer-social__item">
               <a href="https://www.instagram.com" class="footer-social__link" target="_blank">
                 <svg class="footer-social__icon">
@@ -261,7 +261,7 @@
           </div> 
         </form>
          <div class="subscribe-form__button">
-          <button class="button subscribe-form__button--text" type="submit">Подписаться 
+          <button class="subscribe-form__button--text" type="submit">Подписаться 
               <svg class="subscribe-form__button--icon">
               <use href="./images/icons.svg#icon-send"></use>
               </svg>
